Added Login form

--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,7 @@
                 <li><a href="#">Settings</a></li>
                 <li><a href="#">Reports</a></li>
                 <li><a href="#/search">Search</a></li>
+                <li><a href="#/login">Login</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 container-content container">
@@ -95,6 +96,7 @@
 <script src="scripts/controllers/search.js"></script>
 <script src="scripts/services/timeline.service.js"></script>
 <script src="scripts/services/persons.service.js"></script>
+<script src="scripts/controllers/login.js"></script>
 <!-- endbuild -->
 </body>
 </html>
