--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
             <ul class="nav nav-sidebar">
                 <li class="active"><a href="#">Dashboard <span class="sr-only">(current)</span></a></li>
                 <li><a href="#/persons">People</a></li>
-                <li><a href="#">Settings</a></li>
+                <li><a href="#/settings">Settings</a></li>
                 <li><a href="#">Reports</a></li>
                 <li><a href="#/search">Search</a></li>
                 <li><a href="#/login">Login</a></li>
@@ -95,6 +95,7 @@
 <script src="scripts/controllers/profile.js"></script>
 <script src="scripts/controllers/persons.js"></script>
 <script src="scripts/controllers/search.js"></script>
+<script src="scripts/controllers/settings.js"></script>
 <script src="scripts/services/timeline.service.js"></script>
 <script src="scripts/services/persons.service.js"></script>
 <script src="scripts/controllers/login.js"></script>
