--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,8 @@
 <script src="scripts/services/timeline.service.js"></script>
 <script src="scripts/services/persons.service.js"></script>
 <script src="scripts/controllers/login.js"></script>
+<script src="scripts/controllers/skills.js"></script>
+<script src="scripts/services/skills.service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
