--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
                 <li><a href="#/search">Search</a></li>
                 <li><a href="#/login">Login</a></li>
                 <li><a href="#/register">Register</a></li>
+                <li><a href="#/skills">Skills</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 container-content container">
@@ -101,6 +102,7 @@
 <script src="scripts/controllers/login.js"></script>
 <script src="scripts/controllers/skills.js"></script>
 <script src="scripts/services/skills.service.js"></script>
+
 <!-- endbuild -->
 </body>
 </html>
