View your profile

--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
                 <li><a href="#/login">Login</a></li>
                 <li><a href="#/register">Register</a></li>
                 <li><a href="#/skills">Skills</a></li>
+                <li><a href="#/profile">Profile</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 container-content container">
@@ -79,7 +80,7 @@
 <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-aria/angular-aria.js"></script>
-<script src="../bower_components/angular-cookies/angular-cookies.js"></script>
+<script src="bower_components/angular-cookies/angular-cookies.js"></script>
 <script src="bower_components/angular-messages/angular-messages.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
