--- a/app/index.html
+++ b/app/index.html
@@ -28,42 +28,35 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+        <!--    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                     aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-            </button>
+            </button>-->
+
             <a class="navbar-brand" href="#">Ordina <b>360°</b> tool</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">People</a></li>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">Logout</a></li>
-            </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
-            </form>
+
         </div>
     </div>
 </nav>
 
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid" >
+    <div class="row" ng-controller="LoginCtrl">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="#">Dashboard <span class="sr-only">(current)</span></a></li>
-                <li><a href="#/persons">People</a></li>
-                <li><a href="#/settings">Settings</a></li>
-                <li><a href="#">Reports</a></li>
-                <li><a href="#/search">Search</a></li>
-                <li><a href="#/login">Login</a></li>
-                <li><a href="#/register">Register</a></li>
-                <li><a href="#/skills">Skills</a></li>
-                <li><a href="#/profile">Profile</a></li>
+                <li class="active"><a ng-if="isLogged" href="#/dashboard">Dashboard <span class="sr-only">(current)</span></a></li>
+                <li><a  ng-if="isLogged && isAdmin" href="#/persons">People</a></li>
+                <li><a ng-if="isLogged" href="#/settings">Settings</a></li>
+                <li><a ng-if="isLogged" href="#/search">Search</a></li>
+                <li><a ng-if="!isLogged" href="#/login">Login</a></li>
+                <li><a ng-if="!isLogged" href="#/register">Register</a></li>
+                <li><a ng-if="isLogged" href="#/skills">Skills</a></li>
+                <li><a ng-if="isLogged" href="#/profile">Profile</a></li>
+                <li><a ng-if="isLogged" href="#/roles">Roles</a></li>
+                <li><a ng-if="isLogged && isAdmin" href="#/panel">Admin panel</a> </li>
+                <li><button ng-if="isLogged" ng-click="logout()">Logout</button></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 container-content container">
@@ -88,6 +81,7 @@
 <script src="bower_components/angular-touch/angular-touch.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/jasny-bootstrap/dist/js/jasny-bootstrap.js"></script>
+<script src="../bower_components/ng-role-auth/dist/ng-role-auth.js"></script>
 <!-- endbower -->
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/angular-locale_nl-be.js"></script>
@@ -103,6 +97,9 @@
 <script src="scripts/controllers/login.js"></script>
 <script src="scripts/controllers/skills.js"></script>
 <script src="scripts/services/skills.service.js"></script>
+<script src="scripts/controllers/role.js"></script>
+<script src="scripts/services/authenticate.service.js"></script>
+<script src="scripts/controllers/panel.js"></script>
 
 <!-- endbuild -->
 </body>
