--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,7 @@
 <script src="scripts/services/persons.service.js"></script>
 <script src="scripts/controllers/login.js"></script>
 <script src="scripts/controllers/skills.js"></script>
+<script src="scripts/controllers/skillCompetences.js"></script>
 <script src="scripts/services/skills.service.js"></script>
 <script src="scripts/controllers/role.js"></script>
 <script src="scripts/services/authenticate.service.js"></script>
