--- a/app/index.html
+++ b/app/index.html
@@ -1,69 +1,75 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="favicon.ico">
 
-    <title>Ordina 360 Tool - Built For Everyone</title>
+  <title>Ordina 360 Tool - Built For Everyone</title>
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/jasny-bootstrap/dist/css/jasny-bootstrap.css" />
-    <!-- endbower -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css"/>
-    <link rel="stylesheet" href="styles/dashboard.css"/>
-    <!-- endbuild -->
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <!-- build:css(.) styles/vendor.css -->
+  <!-- bower:css -->
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+  <link rel="stylesheet" href="bower_components/jasny-bootstrap/dist/css/jasny-bootstrap.css"/>
+  <!-- endbower -->
+  <!-- build:css(.tmp) styles/main.css -->
+  <link rel="stylesheet" href="styles/main.css"/>
+  <link rel="stylesheet" href="styles/dashboard.css"/>
+  <!-- endbuild -->
 </head>
 
 <body ng-app="empApp">
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-        <!--    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>-->
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <!--    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                  aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>-->
 
-            <a class="navbar-brand" href="#">Ordina <b>360°</b> tool</a>
+      <a class="navbar-brand" href="#">Ordina <b>360°</b> tool</a>
 
-        </div>
     </div>
+  </div>
 </nav>
 
-<div class="container-fluid" >
-    <div class="row" ng-controller="LoginCtrl">
-        <div class="col-sm-3 col-md-2 sidebar">
-            <ul class="nav nav-sidebar">
-                <li class="active"><a ng-if="isLogged" href="#/dashboard">Dashboard <span class="sr-only">(current)</span></a></li>
-                <li><a ng-if="isLogged" href="#/persons">People</a></li><!-- && isAdmin -->
-                <li><a ng-if="isLogged" href="#/customers">Customers</a></li>
-                <li><a ng-if="isLogged" href="#/settings">Settings</a></li>
-                <li><a ng-if="isLogged" href="#/search">Search</a></li>
-                <li><a ng-if="!isLogged" href="#/login">Login</a></li>
-                <li><a ng-if="!isLogged" href="#/register">Register</a></li>
-                <li><a ng-if="isLogged" href="#/skills">Skills</a></li>
-                <li><a ng-if="isLogged" href="#/profile">Profile</a></li>
-                <li><a ng-if="isLogged" href="#/roles">Roles</a></li>
-                <li><a ng-if="isLogged" href="#/panel">Admin panel</a> </li><!-- && isAdmin -->
-                <li><button ng-if="isLogged" ng-click="logout()">Logout</button></li>
-            </ul>
-        </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 container-content container">
-            <div ng-view=""></div>
-        </div>
+<div class="container-fluid">
+  <div class="row" ng-controller="LoginCtrl">
+    <div class="col-sm-3 col-md-2 sidebar">
+      <ul class="nav nav-sidebar">
+        <li class="active"><a ng-if="isLogged" href="#/dashboard">Dashboard <span class="sr-only">(current)</span></a>
+        </li>
+        <li><a ng-if="isLogged" href="#/persons">People</a></li>
+        <!-- && isAdmin -->
+        <li><a ng-if="isLogged" href="#/customers">Customers</a></li>
+        <li><a ng-if="isLogged" href="#/settings">Settings</a></li>
+        <li><a ng-if="isLogged" href="#/search">Search</a></li>
+        <li><a ng-if="!isLogged" href="#/login">Login</a></li>
+        <li><a ng-if="!isLogged" href="#/register">Register</a></li>
+        <li><a ng-if="isLogged" href="#/skills">Skills</a></li>
+        <li><a ng-if="isLogged" href="#/skillCompetences">Skill Competence</a></li>
+        <li><a ng-if="isLogged" href="#/profile">Profile</a></li>
+        <li><a ng-if="isLogged" href="#/roles">Roles</a></li>
+        <li><a ng-if="isLogged" href="#/panel">Admin panel</a></li>
+        <!-- && isAdmin -->
+        <li>
+          <button ng-if="isLogged" ng-click="logout()">Logout</button>
+        </li>
+      </ul>
     </div>
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 container-content container">
+      <div ng-view=""></div>
+    </div>
+  </div>
 </div>
 
 <!-- build:js scripts/vendor.js -->
