--- a/app/index.html
+++ b/app/index.html
@@ -105,10 +105,15 @@
 <script src="scripts/controllers/skillCompetences.js"></script>
 <script src="scripts/services/skills.service.js"></script>
 <script src="scripts/controllers/role.js"></script>
+<script src="scripts/services/role.service.js"></script>
 <script src="scripts/services/authenticate.service.js"></script>
 <script src="scripts/controllers/panel.js"></script>
 <script src="scripts/services/customers.service.js"></script>
 <script src="scripts/controllers/customers.js"></script>
+<script src="/bower_components/lodash/lodash.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.js"></script>
+<script type="text/javascript"
+        src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
 
 <!-- endbuild -->
 </body>
