--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,8 @@
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="bower_components/jasny-bootstrap/dist/css/jasny-bootstrap.css" />
+  <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css" type="text/css">
+
   <!-- endbower -->
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css"/>
@@ -42,7 +44,7 @@
   </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container">
   <div class="row" ng-controller="LoginCtrl">
     <div class="col-sm-3 col-md-2 sidebar">
       <ul class="nav nav-sidebar">
@@ -114,6 +116,10 @@
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.js"></script>
 <script type="text/javascript"
         src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="/bower_components/angular-material/angular-material.js"></script>
+
 
 <!-- endbuild -->
 </body>
