--- a/app/index.html
+++ b/app/index.html
@@ -47,8 +47,8 @@
   <div class="row" ng-controller="LoginCtrl">
     <div class="col-sm-3 col-md-2 sidebar">
       <ul class="nav nav-sidebar">
-        <li class="active"><a ng-if="isLogged" href="#/dashboard">Dashboard <span class="sr-only">(current)</span></a>
-        </li>
+        <li class="active"><a ng-if="isLogged" href="#/dashboard">Dashboard <span class="sr-only">(current)</span></a></li>
+        <li><a ng-if="isLogged" href="#/profile">Profile</a></li>
         <li><a ng-if="isLogged" href="#/persons">People</a></li>
         <!-- && isAdmin -->
         <li><a ng-if="isLogged" href="#/customers">Customers</a></li>
@@ -58,7 +58,6 @@
         <li><a ng-if="!isLogged" href="#/register">Register</a></li>
         <li><a ng-if="isLogged" href="#/skills">Skills</a></li>
         <li><a ng-if="isLogged" href="#/skillCompetences">Skill Competence</a></li>
-        <li><a ng-if="isLogged" href="#/profile">Profile</a></li>
         <li><a ng-if="isLogged" href="#/roles">Roles</a></li>
         <li><a ng-if="isLogged" href="#/panel">Admin panel</a></li>
         <!-- && isAdmin -->
