--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="bower_components/jasny-bootstrap/dist/css/jasny-bootstrap.css" />
   <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+  <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.min.css" />
+  <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css" />
   <!-- endbower -->
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css"/>
@@ -89,6 +91,8 @@
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/jasny-bootstrap/dist/js/jasny-bootstrap.js"></script>
 <script src="bower_components/angular-material/angular-material.js"></script>
+<script src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
+<script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
 <!-- endbower -->
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/angular-locale_nl-be.js"></script>
