--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
         <li><a ng-if="isLogged" href="#/skillCompetences">Skill Competence</a></li>
         <li ng-if="isLogged">
 
-          <md-fab-speed-dial md-open="false" md-direction="right"
+          <md-fab-speed-dial md-open="false" md-direction="down"
                              ng-class="md-fling">
             <md-fab-trigger>
               <md-button aria-label="menu" class="md-raised md-warn">Admin
