--- a/app/index.html
+++ b/app/index.html
@@ -62,11 +62,11 @@
               </md-button>
             </md-fab-trigger>
             <md-fab-actions>
-              <md-button ng-if="isAdmin" aria-label="Persons" href="#/panel" class="md-fab md-raised md-mini">
+              <md-button aria-label="Persons" href="#/panel" class="md-fab md-raised md-mini">
 
-                <ng-md-icon icon="group"></ng-md-icon>
+                <ng-md-icon icon="group_add"></ng-md-icon>
               </md-button>
-              <md-button ng-if="isHero" aria-label="Persons" href="#/persons" class="md-fab md-raised md-mini">
+              <md-button aria-label="Persons" href="#/persons" class="md-fab md-raised md-mini">
 
                 <ng-md-icon icon="group"></ng-md-icon>
               </md-button>
