--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,7 @@
 <script src="bower_components/angular-material/angular-material.js"></script>
 <script src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
 <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
+<script src="bower_components/lodash/lodash.js"></script>
 <!-- endbower -->
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/angular-locale_nl-be.js"></script>
