--- a/app/index.html
+++ b/app/index.html
@@ -141,6 +141,7 @@
 <script src="scripts/services/customers.service.js"></script>
 <script src="scripts/controllers/customers.js"></script>
 <script src="scripts/controllers/management.js"></script>
+<script src="scripts/controllers/search.js"></script>
 <script src="/bower_components/lodash/lodash.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.js"></script>
 <script type="text/javascript"
