--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
   <!-- endbuild -->
 </head>
 
-<body ng-app="empApp">
+<body ng-app="oraj360">
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
