--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,6 @@
   <meta name="author" content="">
   <link rel="icon" href="favicon.ico">
 
-  <title>Ordina 360 Tool - Built For Everyone</title>
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
@@ -26,79 +25,15 @@
   <!-- endbuild -->
 </head>
 
+
 <body ng-app="oraj360">
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <!--    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                  aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-          </button>-->
 
-      <a class="navbar-brand" href="#">Ordina <b>360°</b> tool</a>
+<div ng-view=""></div>
 
-    </div>
-  </div>
-</nav>
-
-<div class="container">
-  <div class="row" ng-controller="LoginCtrl">
-    <div class="col-sm-3 col-md-2 sidebar">
-      <ul class="nav nav-sidebar">
-        <li><a ng-if="!isLogged" href="#/register">Register</a></li>
-        <li><a ng-if="!isLogged" href="#/login">Login</a></li>
-        <li class="active"><a ng-if="isLogged" href="#/dashboard">Dashboard <span class="sr-only">(current)</span></a></li>
-        <li><a ng-if="isLogged" href="#/profile">Profile</a></li>
-        <li ng-if="isLogged">
-
-          <md-fab-speed-dial md-open="false" md-direction="down"
-                             ng-class="md-fling">
-            <md-fab-trigger>
-              <md-button aria-label="menu" class="md-raised md-warn">Admin
-              </md-button>
-            </md-fab-trigger>
-            <md-fab-actions>
-              <md-button aria-label="Persons" href="#/panel" class="md-fab md-raised md-mini">
-
-                <ng-md-icon icon="group_add"></ng-md-icon>
-              </md-button>
-              <md-button aria-label="Persons" href="#/persons" class="md-fab md-raised md-mini">
-
-                <ng-md-icon icon="group"></ng-md-icon>
-              </md-button>
-              <md-button aria-label="Skills" href="#/skills" class="md-fab md-raised md-mini">
-
-                <ng-md-icon icon="school"></ng-md-icon>
-              </md-button>
-              <md-button ng-if="isAdmin" aria-label="Customers" href="#/customers" class="md-fab md-raised md-mini">
+</body>
 
 
-                <ng-md-icon icon="business"></ng-md-icon>
-              </md-button>
-              <md-button ng-if="isAdmin" aria-label="Roles" href="#/roles" class="md-fab md-raised md-mini">
-
-
-                <ng-md-icon icon="verified_user" class="md-fab md-raised md-mini"></ng-md-icon>
-              </md-button>
-            </md-fab-actions>
-          </md-fab-speed-dial>
-
-        </li>
-        <!-- && isAdmin -->
-        <li>
-          <button ng-if="isLogged" ng-click="logout()">Logout</button>
-        </li>
-      </ul>
-    </div>
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 container-content container">
-      <div ng-view=""></div>
-    </div>
-  </div>
-</div>
 
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
