--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,10 @@
+<style>
+
+
+  .container {
+  }
+</style>
+
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
@@ -25,14 +32,15 @@
   <!-- endbuild -->
 </head>
 
-
 <body ng-app="oraj360">
 
+<div class="container">
+  <div ng-view=""></div>
 
-<div ng-view=""></div>
+
+</div>
 
 </body>
-
 
 
 <!-- build:js scripts/vendor.js -->
@@ -60,23 +68,22 @@
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/angular-locale_nl-be.js"></script>
 <script src="scripts/app.js"></script>
-<script src="scripts/controllers/main.js"></script>
-<script src="scripts/controllers/dashboard.js"></script>
-<script src="scripts/controllers/profile.js"></script>
-<script src="scripts/controllers/persons.js"></script>
-<script src="scripts/services/timeline.service.js"></script>
-<script src="scripts/services/persons.service.js"></script>
-<script src="scripts/controllers/login.js"></script>
-<script src="scripts/controllers/skills.js"></script>
-<script src="scripts/services/skills.service.js"></script>
-<script src="scripts/controllers/role.js"></script>
-<script src="scripts/services/role.service.js"></script>
-<script src="scripts/services/authenticate.service.js"></script>
-<script src="scripts/controllers/panel.js"></script>
-<script src="scripts/services/customers.service.js"></script>
-<script src="scripts/controllers/customers.js"></script>
-<script src="scripts/controllers/management.js"></script>
-<script src="scripts/controllers/search.js"></script>
+<script src="scripts/timeline/controllers/dashboard.js"></script>
+<script src="scripts/persons/controllers/profile.js"></script>
+<script src="scripts/persons/controllers/persons.js"></script>
+<script src="scripts/timeline/services/timeline.service.js"></script>
+<script src="scripts/persons/services/persons.service.js"></script>
+<script src="scripts/authentication/controllers/login.js"></script>
+<script src="scripts/skills/controllers/skills.js"></script>
+<script src="scripts/skills/services/skills.service.js"></script>
+<script src="scripts/persons/controllers/role.js"></script>
+<script src="scripts/persons/services/role.service.js"></script>
+<script src="scripts/authentication/services/authenticate.service.js"></script>
+<script src="scripts/persons/controllers/panel.js"></script>
+<script src="scripts/persons/services/customers.service.js"></script>
+<script src="scripts/persons/controllers/customers.js"></script>
+<script src="scripts/persons/controllers/management.js"></script>
+<script src="scripts/persons/controllers/search.js"></script>
 <script src="/bower_components/lodash/lodash.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.js"></script>
 <script type="text/javascript"
