--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,3 @@
-<style>
-
-
-  .container {
-  }
-</style>
-
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
@@ -84,6 +77,7 @@
 <script src="scripts/persons/controllers/customers.js"></script>
 <script src="scripts/persons/controllers/management.js"></script>
 <script src="scripts/persons/controllers/search.js"></script>
+<script src="scripts/persons/directives/about.js"></script>
 <script src="/bower_components/lodash/lodash.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.js"></script>
 <script type="text/javascript"
