Inactive users widget design created

--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,8 @@
 <script src="scripts/persons/controllers/search.js"></script>
 <script src="scripts/persons/directives/about.js"></script>
 <script src="/bower_components/lodash/lodash.js"></script>
+<script src="scripts/persons/directives/inactivelist.js"></script>
+<script src="scripts/authentication/controllers/register.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.js"></script>
 <script type="text/javascript"
         src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
