--- a/app/index.html
+++ b/app/index.html
@@ -176,6 +176,8 @@
 <script src="scripts/authentication/controllers/login.js"></script>
 <script src="scripts/skills/controllers/skills.js"></script>
 <script src="scripts/skills/services/skills.service.js"></script>
+<script src="scripts/skills/directives/skillset.js"></script>
+<script src="scripts/skills/controllers/skillCompetence.js"></script>
 <script src="scripts/persons/controllers/role.js"></script>
 <script src="scripts/persons/services/role.service.js"></script>
 <script src="scripts/authentication/services/authenticate.service.js"></script>
