Added experience directive (mock-up)

--- a/app/index.html
+++ b/app/index.html
@@ -173,6 +173,7 @@
 <script src="scripts/persons/controllers/persons.js"></script>
 <script src="scripts/timeline/services/timeline.service.js"></script>
 <script src="scripts/timeline/directives/learning.js"></script>
+<script src="scripts/timeline/directives/experience.js"></script>
 <script src="scripts/persons/services/persons.service.js"></script>
 <script src="scripts/authentication/controllers/login.js"></script>
 <script src="scripts/skills/controllers/skills.js"></script>
