--- a/app/index.html
+++ b/app/index.html
@@ -165,6 +165,7 @@
 <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
 <script src="bower_components/lodash/lodash.js"></script>
 <script src="bower_components/restangular/dist/restangular.js"></script>
+<script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
 <!-- endbower -->
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/angular-locale_nl-be.js"></script>
