--- a/app/index.html
+++ b/app/index.html
@@ -201,6 +201,8 @@
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="/bower_components/angular-material/angular-material.js"></script>
+<script src="http://maps.google.com/maps/api/js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 
 
 <!-- endbuild -->
