--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
   <meta name="author" content="">
   <link rel="icon" href="favicon.ico">
 
-
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
@@ -19,7 +18,9 @@
   <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.min.css" />
   <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css" />
   <!-- endbower -->
-  <!-- build:css(.tmp) styles/main.css -->
+  <!-- endbuild -->
+  
+  <!-- build:css(.tmp) styles/app.css -->
   <link rel="stylesheet" href="styles/main.css"/>
   <link rel="stylesheet" href="styles/dashboard.css"/>
   <!-- endbuild -->
@@ -146,7 +147,7 @@
 </body>
 
 
-<!-- build:js scripts/vendor.js -->
+<!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/angular/angular.js"></script>
@@ -169,44 +170,41 @@
 <script src="bower_components/restangular/dist/restangular.js"></script>
 <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
 <!-- endbower -->
-<!-- build:js({.tmp,app}) scripts/scripts.js -->
-<script src="scripts/angular-locale_nl-be.js"></script>
-<script src="scripts/app.js"></script>
-<script src="scripts/timeline/controllers/dashboard.js"></script>
-<script src="scripts/persons/controllers/profile.js"></script>
-<script src="scripts/persons/controllers/persons.js"></script>
-<script src="scripts/timeline/services/timeline.service.js"></script>
-<script src="scripts/timeline/directives/learning.js"></script>
-<script src="scripts/timeline/directives/experience.js"></script>
-<script src="scripts/timeline/directives/activity.js"></script>
-<script src="scripts/persons/services/persons.service.js"></script>
-<script src="scripts/authentication/controllers/login.js"></script>
-<script src="scripts/skills/controllers/skills.js"></script>
-<script src="scripts/skills/services/skills.service.js"></script>
-<script src="scripts/skills/directives/skillset.js"></script>
-<script src="scripts/skills/controllers/skillCompetence.js"></script>
-<script src="scripts/persons/controllers/role.js"></script>
-<script src="scripts/persons/services/role.service.js"></script>
-<script src="scripts/authentication/services/authenticate.service.js"></script>
-<script src="scripts/persons/controllers/panel.js"></script>
-<script src="scripts/persons/services/customers.service.js"></script>
-<script src="scripts/persons/controllers/customers.js"></script>
-<script src="scripts/persons/controllers/management.js"></script>
-<script src="scripts/persons/controllers/search.js"></script>
-<script src="scripts/persons/directives/about.js"></script>
-<script src="/bower_components/lodash/lodash.js"></script>
-<script src="scripts/persons/directives/inactivelist.js"></script>
-<script src="scripts/authentication/controllers/register.js"></script>
+  
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.js"></script>
-<script type="text/javascript"
-        src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="/bower_components/angular-material/angular-material.js"></script>
 <script src="http://maps.google.com/maps/api/js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
-
-
+<!-- endbuild -->
+  
+<!-- build:js({.tmp,src}) scripts/app.js -->
+<script src="app/angular-locale_nl-be.js"></script>
+<script src="app/app.js"></script>
+<script src="app/timeline/dashboard.controller.js"></script>
+<script src="app/persons/profile.controller.js"></script>
+<script src="app/persons/persons.controller.js"></script>
+<script src="app/authentication/login.controller.js"></script>
+<script src="app/skills/skills.controller.js"></script>
+<script src="app/skills/skillCompetence.controller.js"></script>
+<script src="app/persons/panel.controller.js"></script>
+<script src="app/persons/customers.controller.js"></script>
+<script src="app/persons/management.controller.js"></script>
+<script src="app/persons/search.controller.js"></script>
+<script src="app/authentication/register.controller.js"></script>
+<script src="app/roles/role.controller.js"></script>
+<script src="app/components/learning.directive.js"></script>
+<script src="app/components/experience.directive.js"></script>
+<script src="app/components/activity.directive.js"></script>
+<script src="app/components/skillset.directive.js"></script>
+<script src="app/components/about.directive.js"></script>
+<script src="app/components/inactivelist.directive.js"></script>
+<script src="app/services/timeline.service.js"></script>
+<script src="app/services/persons.service.js"></script>
+<script src="app/services/skills.service.js"></script>
+<script src="app/services/role.service.js"></script>
+<script src="app/services/authenticate.service.js"></script>
+<script src="app/services/customers.service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
