--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css" />
   <!-- endbower -->
   <!-- endbuild -->
-  
+
   <!-- build:css(.tmp) styles/app.css -->
   <link rel="stylesheet" href="styles/main.css"/>
   <link rel="stylesheet" href="styles/dashboard.css"/>
@@ -170,14 +170,14 @@
 <script src="bower_components/restangular/dist/restangular.js"></script>
 <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
 <!-- endbower -->
-  
+
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="http://maps.google.com/maps/api/js"></script>
+<script src="http://maps.google.com/maps/api/js?libraries=places"></script>
 <!-- endbuild -->
-  
+
 <!-- build:js({.tmp,src}) scripts/app.js -->
 <script src="app/angular-locale_nl-be.js"></script>
 <script src="app/app.js"></script>
