--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
 
     <div id="header-menu" layout="row">
       <md-menu md-offset="0 68">
-        <md-button ng-click="$mdOpenMenu()" id="menu-button">
+        <md-button ng-click="$mdOpenMenu()" aria-label="Open menu" id="menu-button">
           <div id="menu-icon" style="background-image:url('http://lorempixel.com/100/100/');">
             <ng-md-icon id="menu-dropdown" icon="expand_more"></ng-md-icon>
           </div>
