fixed profile summary binding

--- a/jworks360/src/core/route/states/html/profiles.state.html
+++ b/jworks360/src/core/route/states/html/profiles.state.html
@@ -1,2 +1,2 @@
-<profile-summary summary="$ctrl.summary">{{$ctrl.summary}}</profile-summary>
+<profile-summary summary="$ctrl.summary"></profile-summary>
 <profile-menu></profile-menu>
