added timeline directive

--- a/jworks360/src/core/route/states/html/profiles.state.html
+++ b/jworks360/src/core/route/states/html/profiles.state.html
@@ -1,5 +1,6 @@
-<div learning-path>
-
+<div layout="column">
+  <div>
+    <profile-menu></profile-menu>
+    <timeline></timeline>
+  </div>
 </div>
-<profile-summary summary="$ctrl.summary"></profile-summary>
-<profile-menu></profile-menu>
