--- a/jworks360/src/timeline/directive/timeline-directive.html
+++ b/jworks360/src/timeline/directive/timeline-directive.html
@@ -6,5 +6,7 @@
     </md-card-title-text>
   </md-card-title>
   <md-card-content>
+    <!-- todo remove element after data loaded -->
+      <md-progress-circular layout-align="center" class="md-accent" md-mode="{{vm.mode}}" md-diameter="40"></md-progress-circular>
   </md-card-content>
 </md-card>
