added styles to timeline timeline showing more information

--- a/jworks360/src/core/route/states/html/profiles.state.html
+++ b/jworks360/src/core/route/states/html/profiles.state.html
@@ -1,6 +1,8 @@
 <div layout="column">
   <div>
     <profile-menu></profile-menu>
-    <timeline></timeline>
+    <div layout="row" layout-align="center">
+      <timeline flex="70"></timeline>
+    </div>
   </div>
 </div>
