refactoring and added layout components

--- a/jworks360/src/core/route/states/login/login.state.html
+++ b/jworks360/src/core/route/states/login/login.state.html
@@ -1,6 +1,7 @@
 <div class="layout-login">
   <div layout="row" layout-align="center center" class="login-page-body">
     <div flex="55"
+         flex-xs="95"
          flex-gt-sm="45"
          flex-gt-md="35"
          flex-gt-lg="25">
