--- a/jworks360/src/timeline/directive/timeline-directive.html
+++ b/jworks360/src/timeline/directive/timeline-directive.html
@@ -21,11 +21,12 @@
       <div ng-show="vm.selectedItem">
         <p>{{vm.selectedItem.date | amUtc | amDateFormat:'dddd, MMMM Do YYYY'}}</p>
         <p>{{vm.selectedItem.description}}</p>
-        <p class="md-subhead">"{{vm.selectedItem.moreInformation}}"</p>
+        <p class="md-subhead" ng-show="vm.selectedItem.moreInformation">{{vm.selectedItem.moreInformation}}</p>
       </div>
     </md-card-title-text>
   </md-card-title>
-  <md-card-content class="timeline-container" ng-show="!vm.isRequestPending && !vm.hasApiError">
+  <md-card-content class="timeline-container" ng-show="!vm.isRequestPending && !vm.hasApiError"
+  >
   </md-card-content>
   <div>
     <md-chips ng-show="vm.selectedItem.tags" layout="row" layout-align="end center">
