--- a/jworks360/src/core/route/states/profile/profile-state.html
+++ b/jworks360/src/core/route/states/profile/profile-state.html
@@ -1,4 +1,5 @@
 <div layout="column" layout-fill>
   <main-toolbar-v2></main-toolbar-v2>
   <header-v2></header-v2>
+  <profile-about></profile-about>
 </div>
