Add animation library

--- a/ordineo/src/core/route/states/profile/profile-state.html
+++ b/ordineo/src/core/route/states/profile/profile-state.html
@@ -1,7 +1,6 @@
 <div layout="column" layout-fill>
   <main-toolbar-v2></main-toolbar-v2>
   <header-v2></header-v2>
-  <profile-about functie="Designer" unit="Clockwork">
-  </profile-about>
-  <mood></mood>
+  <!--<profile-about functie="Designer" unit="Clockwork">-->
+  <profile-about></profile-about>
 </div>
