Add loading status and fade in animation to about directive

--- a/ordineo/src/core/route/states/profile/profile-state.html
+++ b/ordineo/src/core/route/states/profile/profile-state.html
@@ -2,5 +2,5 @@
   <main-toolbar-v2></main-toolbar-v2>
   <header-v2></header-v2>
   <!--<profile-about functie="Designer" unit="Clockwork">-->
-  <profile-about></profile-about>
+  <profile-about has-loading-status></profile-about>
 </div>
