Remove unused code

--- a/ordineo/src/core/route/states/profile/profile-state.html
+++ b/ordineo/src/core/route/states/profile/profile-state.html
@@ -1,6 +1,5 @@
 <div layout="column" layout-fill>
   <main-toolbar-v2></main-toolbar-v2>
   <header-v2></header-v2>
-  <!--<profile-about functie="Designer" unit="Clockwork">-->
-  <profile-about has-loading-status></profile-about>
+  <profile-about></profile-about>
 </div>
