Add input labels to about box in edit mode Add edit buttons to card header component

--- a/ordineo/src/core/route/states/profile/profile-state.html
+++ b/ordineo/src/core/route/states/profile/profile-state.html
@@ -1,3 +1,7 @@
-<div layout="column" layout-fill>
+<div layout="column">
   <profile-about></profile-about>
+  <div flex layout-gt-sm="row">
+    <profile-about flex="50"></profile-about>
+    <profile-about flex="50"></profile-about>
+  </div>
 </div>
