--- a/ordineo/src/core/route/states/profile/profile-state.html
+++ b/ordineo/src/core/route/states/profile/profile-state.html
@@ -1,7 +1,7 @@
 <div layout="column">
-  <profile-about></profile-about>
+  <profile-about username="Nivek"></profile-about>
   <div flex layout-gt-sm="row">
-    <profile-about flex="50"></profile-about>
+    <profile-about flex="50" username="Turbots"></profile-about>
     <profile-about flex="50"></profile-about>
   </div>
 </div>
