Add div height animation

--- a/ordineo/src/core/route/states/profile/profile-state.html
+++ b/ordineo/src/core/route/states/profile/profile-state.html
@@ -1,7 +1,7 @@
 <div layout="column">
-  <profile-about username="Nivek"></profile-about>
-  <div flex layout-gt-sm="row">
-    <profile-about flex="50" username="Turbots"></profile-about>
-    <profile-about flex="50"></profile-about>
+  <div layout="row">
+    <profile-about flex="50" username="Nivek"></profile-about>
+    <profile-about flex="50"  username="Turbosts"></profile-about>
   </div>
+  <profile-about flex username="Turbots"></profile-about>
 </div>
