Create header and toolbar

--- a/ordineo/src/app-component.html
+++ b/ordineo/src/app-component.html
@@ -1,1 +1,5 @@
-<section ui-view></section>
+<div id="page-wrap">
+  <toolbar></toolbar>
+  <header></header>
+  <section ui-view></section>
+</div>
