--- a/ordineo/src/core/route/states/profile/profile-state.html
+++ b/ordineo/src/core/route/states/profile/profile-state.html
@@ -1,3 +1,3 @@
-<div layout="column" layout-fill>
+<div layout="column" layout-fill style="border: solid 1px black;">
   <profile-about></profile-about>
 </div>
