Update controller testing

--- a/ordineo/src/core/route/states/profile/profile-state.html
+++ b/ordineo/src/core/route/states/profile/profile-state.html
@@ -1,7 +1,3 @@
 <div layout="column">
-  <div layout="row">
-    <profile-about flex="50" username="Nivek"></profile-about>
-    <profile-about flex="50"  username="Turbosts"></profile-about>
-  </div>
-  <profile-about flex username="Turbots"></profile-about>
+  <profile-about username="nivek"></profile-about>
 </div>
