--- a/ordineo/src/core/route/states/profile/profile-state.html
+++ b/ordineo/src/core/route/states/profile/profile-state.html
@@ -1,7 +1,9 @@
 <div layout="column">
   <div>
-    <h1>MY PEOPLE INFO > MANAGE VIEWS</h1>
-    <linkedin></linkedin>
+    <div layout="row" flex="grow" layout-align="center center">
+      <h1 flex="80">MY PEOPLE INFO > MANAGE VIEWS</h1>
+      <linkedin flex="20"></linkedin>
+    </div>
   </div>
   <profile-about username="nivek"></profile-about>
 </div>
