--- a/ordineo/src/app-component.html
+++ b/ordineo/src/app-component.html
@@ -1,5 +1,5 @@
 <div id="page-wrap">
-  <toolbar></toolbar>
-  <header></header>
+  <!--<toolbar></toolbar>-->
+  <!--<header></header>-->
   <section ui-view></section>
 </div>
