Added profile picture from image service

--- a/ordineo/src/core/route/states/profile/profile-state.html
+++ b/ordineo/src/core/route/states/profile/profile-state.html
@@ -5,5 +5,5 @@
       <linkedin flex="20"></linkedin>
     </div>
   </div>
-  <profile-about username="nivek"></profile-about>
+  <profile-about username="Nivek"></profile-about>
 </div>
